# SpaceLog

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
libresprite/: Ocean-1.ase  Star.ase  Sun.ase  Terran-1.ase
source/: assetloader.cpp  assetloader.h  assetmanager.cpp  assetmanager.h  gameobject.cpp  gameobject.h  main.cpp  mapgenerator.cpp  mapgenerator.h  planet.cpp  planet.h
